manifest/objects/ALTF__Decision_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Decision Criterion</relationshipLabel>
        <relationshipName>Decision_Criterion</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Milestone__c</fullName>
        <label>Milestone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Decision Criterion</relationshipLabel>
        <relationshipName>Decision_Criterion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Formal</fullName>
                </value>
                <value>
                    <fullName>Informal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Altify Decision Criteria</label>
    <nameField>
        <label>Decision Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Decision Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>